<resources>
    <string name="app_name">headlock</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="bluetooth">블루투스 디바이스</string>
    <string name="wearing">wearing</string>
    <string name="helmet">HELMET</string>
    <string name="kickboard">KICKBOARD</string>
    <string name="status">STATUS</string>
    <string name="bt">BT</string>
    <string name="disconnexted">DISCONNECTED</string>
    <string name="helmet2">헬멧</string>
    <string name="connection">연결하세요</string>
    <string name="hel_state">미착용</string>
    <string name="search">검색</string>
    <string name="braek">브레이크</string>
    <string name="break_state">미작동</string>
    <string name="title_location_service">title_location_service</string>
    <string name="message_location_service">message_location_service</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="use">이용하기</string>
</resources>